--- a/code-challenge/codechallenge1.html
+++ b/code-challenge/codechallenge1.html
@@ -7,6 +7,6 @@
 
   <body>
     <h2>Hello!</h2>
-    <script src="src/index.js"></script>
+    <script src="codechallenge1.js"></script>
   </body>
 </html>
