--- a/index.html
+++ b/index.html
@@ -18,13 +18,27 @@
     </form>
     <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+      <input
+        type="text"
+        placeholder="Write a To Do and Press enter!"
+        required
+      />
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+    <div id="weather">
       <span></span>
       <span></span>
     </div>
     <script src="js/clock.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
     <script src="js/greetings.js"></script>
+    <script src="js/weather.js"></script>
     <script src="js/quotes.js"></script>
   </body>
 </html>
