--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <header>Hello, What is your name?</header>
         <input type="text" required maxlength="15" />
       </form>
+
       <div id="momentum" class="hidden">
         <h2 id="clock" class="hidden">00:00:00</h2>
         <h1 id="greeting" class="hidden"></h1>
@@ -30,6 +31,11 @@
         </div>
       </div>
     </div>
+
+    <div id="splash-screen">
+      <i class="fa-regular fa-calendar-check"></i>
+    </div>
+
     <script src="js/clock.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
